# mdbx-remote

./: .gitattributes  Cargo.toml  Dockerfile  Readme.md
.github/: dockerhub.yaml
.github/workflows/: cratesio.yaml  dockerhub.yaml
crates/mdbx/: Cargo.toml
crates/mdbx-remote/: Cargo.toml  README.md
crates/mdbx-remote/mdbx-sys/: Cargo.toml  build.rs
crates/mdbx-remote/mdbx-sys/src/: lib.rs
crates/mdbx-remote/src/: any.rs  codec.rs  cursor.rs  environment.rs  error.rs  flags.rs  lib.rs  remote.rs  service.rs  transaction.rs  txn_manager.rs
crates/mdbx-remote/tests/: any.rs  cursor.rs  environment.rs  transaction.rs
crates/mdbx-utils/: Cargo.toml
crates/mdbx/src/: dump.rs  main.rs  reth.rs  server.rs  stat.rs
