[package]
name = "mdbx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.0", features = ["derive", "env"]}
libmdbx-remote.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features=["env-filter"]}
tokio = {workspace = true, features = ["full"]}
color-eyre = {version = "0.6"}
tarpc = {workspace = true, features = ["full"]}
tokio-stream = {workspace = true}
url.workspace = true
alloy = {version = "0.5", features = ["full"]}
reth-db = {git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0"}
serde_json = {version = "1.0"}