[package]
name = "mdbx-remote-sys"
description = "Raw bindings for libmdbx"
version = "0.2.0"
edition.workspace = true
# rust-version.workspace = true
license = "Apache-2.0"
# homepage.workspace = true
# repository.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}

[build-dependencies]
cc = "1.0"
bindgen = { version = "0.70", default-features = false, features = ["runtime"] }
